# octopus

./: .ghci  .travis.yml  LICENSE  Makefile  README.md  cabal.config  default.nix  octopus.cabal  octopus.hs  octopus.yaml
Network/: Octopus.hs
Network/Octopus/: Command.hs  HTTP.hs  Jobs.hs  ThrottledIO.hs
src/: App.hs  Main.hs  main.hs  octopus.hs
src/Network/Octopus/: Command.hs  HTTP.hs  Jobs.hs  SerializableIO.hs
src/Octopus/: Command.hs  HTTP.hs  Jobs.hs  Owner.hs  SerializableIO.hs  TQueue.hs
test/: AppSpec.hs  Helper.hs  OctopusSpec.hs
test/Network/: OctopusSpec.hs
test/Octopus/: CommandSpec.hs  HTTPSpec.hs
test/fixtures/: jobs.yaml
