name:                octopus
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
copyright:           (c) 2014 Zalora South East Asia Pte. Ltd
author:              Vladimir Kirillov
maintainer:          proger@hackndev.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable octopus
  main-is:             Main.hs
  hs-source-dirs:      src

  build-depends:       base >=4.6 && <4.8
                     , unix
                     , bytestring
                     , text
                     , containers
                     , directory
                     , filepath
                     , network
                     , mtl
                     , transformers
                     , stm
                     , async
                     , process
                     , time
                     , http-types
                     , HTTP >= 4000.2
                     , aeson
                     , yaml >= 0.8
                     , scotty
                     , wai-middleware-static
                     , wai-extra
                     , conduit
                     , conduit-combinators
                     , blaze-builder
                     , stm-chans
                     , stm-conduit
                     , ekg >= 0.4

  default-language:    Haskell2010
  ghc-options:         -rtsopts -threaded
                       -Wall -Werror
  ghc-prof-options:    -prof -auto-all

test-suite spec
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs

  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

  build-depends:       base >=4.6 && <4.8
                     , unix
                     , bytestring
                     , text
                     , containers
                     , directory
                     , filepath
                     , network
                     , mtl
                     , transformers
                     , stm
                     , async
                     , process
                     , time
                     , http-types
                     , HTTP >= 4000.2
                     , aeson
                     , yaml >= 0.8
                     , scotty
                     , wai-middleware-static
                     , wai-extra
                     , conduit
                     , conduit-combinators
                     , blaze-builder
                     , stm-chans
                     , stm-conduit
                     , ekg >= 0.4

                     , hspec >= 1.9
                     , QuickCheck
                     , quickcheck-instances
